testing/macro-tests/tests/ui/relation_one_suffix_required.stderr
error: relation field ident 'user' must end with '_id'
  --> tests/ui/relation_one_suffix_required.rs:26:23
   |
26 |         field(ident = "user", value(item(rel = "User", prim = "Ulid")))
   |                       ^^^^^^
